2008-11-25  Jan Kratochvil  <jan.kratochvil@redhat.com>

PR fortran/38248
        * module.c (gfc_dump_module): Check rename/unlink syscalls errors.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@142190 138bc75d-0d04-0410-961f-82ee72b054a4